Fix transition z-index

--- a/src/render/ui/Transition/Transition.css
+++ b/src/render/ui/Transition/Transition.css
@@ -21,10 +21,10 @@
   pointer-events: all;
 }
 .TransitionWrap > *:first-child {
-  z-index: 72;
+  z-index: 12;
 }
 .TransitionWrap > *:last-child {
-  z-index: 71;
+  z-index: 11;
 }
 .TransitionWrap > *:not(.open):first-child {
   transform: scale(1.1) translateZ(0px);
